2007-12-08	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am: irq_supp.h was moved from shared/irq to
	libcpu/powerpc/new-exceptions/bspsupport.

2007-12-06	Joel Sherrill <joel.sherrill@OARcorp.com>

	* irq/irq_init.c: Add missing vectDesc variable.

2007-12-04	Joel Sherrill <joel.sherrill@oarcorp.com>

	* clock/clock.c: Fix typo.

2007-12-04	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq_init.c: removed unnecessary code (alredy
	done by shared/irq/irq.c).

2007-12-04	Joel Sherrill <joel.sherrill@OARcorp.com>

	* include/bsp.h, startup/bspstart.c: Move interrupt_stack_size field
	from CPU Table to Configuration Table. Eliminate CPU Table from all
	ports. Delete references to CPU Table in all forms.

2007-12-03	Joel Sherrill <joel.sherrill@oarcorp.com>

	* Makefile.am, irq/no_pic.c: Spacing.

2007-12-03	Joel Sherrill <joel.sherrill@OARcorp.com>

	* Makefile.am, startup/bspstart.c: Moved most of the remaining CPU
	Table fields to the Configuration Table. This included
	pretasking_hook, predriver_hook, postdriver_hook, idle_task,
	do_zero_of_workspace, extra_mpci_receive_server_stack,
	stack_allocate_hook, and stack_free_hook. As a side-effect of this
	effort some multiprocessing code was made conditional and some style
	clean up occurred.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>

	* irq/no_pic.c: use new inline routine exported by
	shared/irq/irq_supp.h for scanning the handler list.

2007-12-02	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq_init.c: removed irrelevant comment.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* startup/bspstart.c: removed declaration of 
	bsp_exceptions_in_RAM.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* irq/irq.h, irq/no_pic.c: some more changes to let
	using shared/irq/irq.c work.

2007-11-30	Till Straumann <strauman@slac.stanford.edu>

	* Makefile.am, irq/irq.h, irq/no_pic.c: install
	and use new <irq/irq_supp.h> header.
