@@ -30,10 +30,6 @@ static void nop_func(){}
  * default isOn function
  */
 static int not_connected() {return 0;}
-/*
- * default possible isOn function
- */
-static int connected() {return 1;}
 
 static rtems_irq_connect_data      rtemsIrq[BSP_IRQ_NUMBER];
 static rtems_irq_global_settings   initial_config;
@@ -56,7 +52,6 @@ static rtems_irq_prio irqPrioTable[BSP_IRQ_NUMBER]={
    */
 void BSP_rtems_irq_mng_init(unsigned cpuId)
 {
-  rtems_raw_except_connect_data vectorDesc;
   int i;
   
   /*
@@ -91,31 +86,6 @@ void BSP_rtems_irq_mng_init(unsigned cpuId)
     );
   }
   
-  /*
-   * We must connect the raw irq handler for the two
-   * expected interrupt sources : decrementer and external interrupts.
-   */
-  vectorDesc.exceptIndex      = ASM_DEC_VECTOR;
-  vectorDesc.hdl.vector       = ASM_DEC_VECTOR;
-  vectorDesc.hdl.raw_hdl      = decrementer_exception_vector_prolog_code;
-  vectorDesc.hdl.raw_hdl_size = 
-     (unsigned) decrementer_exception_vector_prolog_code_size;
-  vectorDesc.on               =   nop_func;
-  vectorDesc.off              =   nop_func;
-  vectorDesc.isOn             =   connected;
-  if (!ppc_set_exception (&vectorDesc))
-  {
-    BSP_panic("Unable to initialize RTEMS decrementer raw exception\n");
-  }
-
-  vectorDesc.exceptIndex      = ASM_EXT_VECTOR;
-  vectorDesc.hdl.vector       = ASM_EXT_VECTOR;
-  vectorDesc.hdl.raw_hdl      = external_exception_vector_prolog_code;
-  vectorDesc.hdl.raw_hdl_size = 
-    (unsigned) external_exception_vector_prolog_code_size;
-  if (!ppc_set_exception (&vectorDesc)) {
-    BSP_panic("Unable to initialize RTEMS external raw exception\n");
-  }
   #ifdef TRACE_IRQ_INIT  
     printk("RTEMS IRQ management is now operationnal\n");
   #endif
