@@ -1,3 +1,8 @@
+2007-12-10	Till Straumann <strauman@slac.stanford.edu>
+	
+	* Makefile.am, irq/irq_init.c: use vector/interrupt
+	support from libcpu/powerpc/new-exceptions/bspsupport.
+
 2007-12-08	Till Straumann <strauman@slac.stanford.edu>
 
 	* Makefile.am: irq_supp.h was moved from shared/irq to
